<resources>
    <string name="app_name">Ziffy Tech</string>
    <string name="facebook_app_id">325191124651700</string>
    <string name="fb_login_protocol_scheme">fb325191124651700</string>
    <string name="process_with_Data">Processing with data..</string>
    <string name="hint_search">Search Keywords</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="thankyou">Thank you for appointment</string>
    <string name="action_settings">Settings</string>
    <string name="error_can_not_connect_to_server">Can not connect to server</string>
    <string name="error_no_internet">No internet connection</string>
    <string name="already_booked">Time Slot Already Booked</string>
    <string name="tab_morning">Morning</string>
    <string name="tab_afternoon">Afternoon</string>
    <string name="tab_evening">Evening</string>
    <string name="patient_contact">Patient Contact</string>
    <string name="appointment_time">Appointment Time</string>
    <string name="contact_info">Contact Information</string>
    <string name="payment_process">Payment Process</string>
    <string name="nav_update_profile">Update Profile</string>
    <string name="nav_change_password">Change Password</string>
    <string name="nav_my_appointment">My Appointment</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_share">Share</string>
    <string name="nav_rating">Rating Us</string>
    <string name="nav_login">Login</string>
    <string name="item_title">Communicate</string>
    <string name="item_user">User Manage</string>
    <string name="tab_list">List</string>
    <string name="tab_map">Map</string>
    <string name="countinue_home">Continue Home</string>
    <string name="track_my_order">Track my order</string>
    <string name="show_appointment">Show Appointment</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="tab_service">Services</string>
    <string name="tab_details">Details</string>
    <string name="tab_reviews">Reviews</string>
    <string name="tab_photo">Photos</string>
    <string name="tab_doctors">Doctors</string>
    <string name="create_account">Create an Account</string>
    <string name="createaccount_yourfirstname">Your full name</string>
    <string name="createaccount_yourphone">Your phone</string>
    <string name="createaccount_emailaddress">Email address</string>
    <string name="createaccount_createpassword">Create password</string>
    <string name="createaccount_termsandprivacypolicy">By signing , you are accepting</string>
    <string name="createaccount_our">our</string>
    <string name="createaccount_terms">Terms</string>
    <string name="createaccount_and">and</string>
    <string name="createaccount_privacypolicy">Privacy Policy</string>
    <string name="createaccount_next">Next</string>
    <string name="login_now">Login Now</string>
    <string name="sign_in">Sign In</string>
    <string name="signin_emailaddress">Email address</string>
    <string name="signin_password">Password</string>
    <string name="signin_forgotmypassword">Forgot password?</string>
    <string name="register_new">Register new User</string>
    <string name="PersonalDetails">Personal Details</string>
    <string name="required">Required</string>
    <string name="cancle">Cancle</string>
    <string name="your_ratings">Your Rating</string>
    <string name="your_comment">Your Comment</string>
    <string name="your_comment_hint">Your comment here</string>
    <string name="Name">Name</string>
    <string name="contact">Contact Number</string>
    <string name="age">Age</string>
    <string name="Email">Email ID</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dob">Date of Birth*</string>
    <string name="blood_grpoup">Blood Group</string>
    <string name="Marital_status">Marital Status</string>
    <string name="Height">Height in cm</string>
    <string name="Weight">Weight</string>
    <string name="EmergencyContact">Emergency Contact</string>
    <string name="Location">Locality</string>
    <string name="Allergies">Add Allergies</string>
    <string name="CurrentMedications">Current Medications</string>
    <string name="PastMedications">Past Medications</string>
    <string name="ChronicDiseases">Chronic Diseases</string>
    <string name="Injuries">Injuries</string>
    <string name="Surgeries">Surgeries</string>
    <string name="Occupation">Occupation</string>
    <string name="Smoking">Smoking</string>
    <string name="type_occup">IT/ Health/ Government/ Private/ Etc.</string>
    <string name="type_smoking">Number of Ciggarettes per day</string>
    <string name="AlcoholConsumption">Alcohol Consumption</string>
    <string name="ActivityLevel">Activity Level</string>
    <string name="FoodPreferences">Food Preferences</string>
    <string name="marride">Married</string>
    <string name="unmarride">Single</string>
    <string name="allergies">Add Allergies</string>
    <string name="currentMedications">Add Current medicines</string>
    <string name="pastMedications">Add Past medicines</string>
    <string name="chronicDiseases">Chronic Diseases</string>
    <string name="injuries">Injuries</string>
    <string name="surgeries">Surgeries</string>
    <string name="occupation">IT/ Health/ Government/ Private/ Etc.</string>
    <string name="smoking">Number of Cigarettes per day</string>
    <string name="alcoholConsumption">Alcohol Consumption</string>
    <string name="address">Address :</string>
    <string name="phone">Phone :</string>
    <string name="enter_phone">Enter Valid Phone</string>
    <string name="enter_bdy">Enter Birthday</string>
    <string name="contact_us">Contact Us</string>
    <string name="add_review">Add Review</string>
    <string name="send">Send</string>
    <string name="valid_required_email">Email required</string>
    <string name="valid_email">Input valid email</string>
    <string name="valid_required_password">Password required</string>
    <string name="password_short">Password is too short</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_relation">Enter Relation</string>
    <string name="password_not_match">Password not match</string>
    <string name="dobi">Enter Date of Birth</string>
    <string name="blood_grop">Enter Blood Group</string>
    <string name="valid_required_fullname">Fullname required</string>
    <string name="valid_required_phone">Phone required</string>
    <string name="valid_required_current_password">Required Current Password</string>
    <string name="valid_required_new_password">Required New Password</string>
    <string name="valid_not_match">Re Enter password not match</string>
    <string name="update_profile">Update Profile</string>
    <string name="change_password">Change Password</string>
    <string name="my_appointments">My Appointment</string>
    <string name="update">Update</string>
    <string name="profile_update_success">Profile Updated Successfully</string>
    <string name="new_password">New Password</string>
    <string name="cur_password">Current Password</string>
    <string name="re_password">Re Enter Password</string>
    <string name="cancel_confirmation">Are you sure to cancel appointment ?</string>
    <string name="fire">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_n_book">Confirm and Book Appointment</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="cover_area">Coverage Area : </string>
    <string name="search">Search</string>
    <string name="allow_nearby">Near By</string>
    <string name="choose_country">Choose Country</string>
    <string name="choose_city">Choose City</string>
    <string name="choose_locality">Choose Locality</string>
    <string name="choose_doctor">Choose Doctor</string>
    <string name="choose_date">Choose Date</string>
    <string name="appoitnment_confirm_message_part1">Your appointment is booked successfully, Appointment ID : </string>
    <string name="appointment_confirm_message_part2">visit My Appointment for more details</string>
    <string name="email">Email :</string>
    <string name="paid">Paid</string>
    <string name="unpaid">Un Paid</string>
    <string name="KM">KM</string>
    <string name="hr">hr.</string>
    <string name="min">min.</string>
    <string name="service_charges">Service Charge :</string>
    <string name="approx_time">Approx Time : </string>
    <string name="amount">Amount : </string>
    <string name="BOOK">BOOK</string>
    <string name="not_timetable_set">Not Timetable Set for Clinic</string>
    <string name="best_Services">Best Services</string>
    <string name="drive_to_location">Drive to location</string>
    <string name="our_services">Our Services</string>
    <string name="reviews">Reviews</string>
    <string name="find_a_doctor">Find a Doctor</string>
    <string name="medical_records">Medical Records</string>
    <string name="remainders">Remainders</string>
    <string name="order_medicine">Order Medicine</string>
    <string name="tab_book">Book</string>
    <string name="book_bycall">Book by call</string>
    <string name="askwuestion">Ask Questions</string>
    <string name="chat">Chat</string>
    <string name="booklab">Book Lab</string>
    <string name="tab_consulation">Consulation</string>
    <string name="know_more">Know More</string>
    <string-array name="occurence">
        <item>Once</item>
        <item>Weekly</item>
    </string-array>
    <string-array name="pref_alarm_play_time_entries">
        <item>10 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>5 minutes</item>
    </string-array>
    <string-array name="pref_alarm_play_time_values">
        <item>10</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>180</item>
        <item>300</item>
    </string-array>
    <string name="setalarm">Set Alarm</string>
    <string name="enterpin">Enter Pin</string>
    <string name="entercity">Enter City</string>
    <string name="enteraddress">Enter Address</string>
    <string name="enetertime">Enter Time</string>
    <string name="title_activity_my_maps">Map</string>
</resources>