<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical" >
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:hint="@string/createaccount_yourfirstname"
                android:id="@+id/txtFirstname" />
            </android.support.design.widget.TextInputLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:inputType="number"
                        android:maxLength="10"
                        android:gravity="center"
                        android:hint="@string/createaccount_yourphone"
                        android:id="@+id/txtPhone" />
                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/btnCountry"
                    android:background="@null"
                    android:text="+91"
                    android:layout_gravity="center_vertical"
                    android:drawableRight="@drawable/orca_attachments_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp" />

            </FrameLayout>




            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textEmailAddress"
                android:hint="@string/createaccount_emailaddress"
                android:id="@+id/txtEmail" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"
                android:hint="@string/createaccount_createpassword"
                android:id="@+id/txtPassword" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
              >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:inputType="textPassword"
                    android:hint="Confirm Password"
                    android:id="@+id/c_pass" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/register_new"
                android:id="@+id/button"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textColor="@color/colorTextWhite"
                android:background="@drawable/xml_button"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="15dp"
                android:textAlignment="center"
                android:text="@string/createaccount_termsandprivacypolicy"
                android:id="@+id/textView" />
            <LinearLayout
                android:id="@+id/terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="3dp"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textSize="15dp"
                    android:text="@string/createaccount_our"
                    android:id="@+id/textView2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:layout_marginLeft="5dp"
                    android:textStyle="bold"
                    android:text="@string/createaccount_terms"
                    android:id="@+id/txtTerms" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/createaccount_and"
                    android:id="@+id/textView4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textStyle="bold"
                    android:textSize="15dp"
                    android:text="@string/createaccount_privacypolicy"
                    android:id="@+id/txtPrivacypolicy" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
